namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Interfaces.Rest.Resources;

public record RequestAccidentDataResource(string IncidentId, string SupervisorId);