namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Interfaces.Rest.Resources;

public record RequestReportExportationResource(string Format);